force-app/main/default/objects/Knowledge__kav/fields/Bulletin_Text__c.field-meta.xml
<CustomField>
    <fullName>Bulletin_Text__c</fullName>
    <description>RUBX-2438 – Field created for REQ-1876-Select a Bulletin (type=Product) Knowledge Article Type</description>
    <inlineHelpText>Enter the content for the bulletin.</inlineHelpText>
    <label>Bulletin Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>