force-app/main/default/objects/Knowledge__kav/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>RUBX-2417 – REQ-1855-Select a Reference Knowledge Article Type</description>
    <inlineHelpText>Use this area to answer a question or provide information.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>