force-app/main/default/objects/Knowledge__kav/fields/Financial_Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institution_Type__c</fullName>
    <description>RUBX-2419 – REQ-1857-Select a System Requirements Knowledge Article Type</description>
    <label>Financial Institution Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Credit Union</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>