force-app/main/default/objects/Knowledge__kav/fields/Host_Location__c.field-meta.xml
<CustomField>
    <fullName>Host_Location__c</fullName>
    <description>RUBX-2419 – REQ-1857-Select a System Requirements Knowledge Article Type</description>
    <label>Host Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Hosted</fullName>
            </value>
            <value>
                <fullName>Finastra Hosted</fullName>
            </value>
            <value>
                <fullName>Client and Finastra Hosted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>