force-app/main/default/objects/Knowledge__kav/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>RUBX-2438 – Field created for REQ-1876-Select a Bulletin (type=Product) Knowledge Article Type</description>
    <inlineHelpText>Enter details in the Internal Notes field for content that is for internal use only. If the article is client facing, content in this field is not visible to clients.</inlineHelpText>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>