force-app/main/default/objects/Knowledge__kav/fields/Product_Genre__c.field-meta.xml
<CustomField>
    <fullName>Product_Genre__c</fullName>
    <description>RUBX-2419 – REQ-1857-Select a System Requirements Knowledge Article Type</description>
    <label>Product Genre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch Automation</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Core Solutions</fullName>
            </value>
            <value>
                <fullName>Enterprise Content Management</fullName>
            </value>
            <value>
                <fullName>Enterprise Solutions</fullName>
            </value>
            <value>
                <fullName>Financial Accounting</fullName>
            </value>
            <value>
                <fullName>Loan Servicing</fullName>
            </value>
            <value>
                <fullName>Mortgage Lending</fullName>
            </value>
            <value>
                <fullName>Payments / Item Processing</fullName>
            </value>
            <value>
                <fullName>Risk Management</fullName>
            </value>
            <value>
                <fullName>Self Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>