force-app/main/default/objects/Knowledge__kav/fields/Remove_After_Date__c.field-meta.xml
<CustomField>
    <fullName>Remove_After_Date__c</fullName>
    <description>RUBX-2438 – Field created for REQ-1876-Select a Bulletin (type=Product) Knowledge Article Type</description>
    <inlineHelpText>Set the date the article should be archived and removed from the search results.</inlineHelpText>
    <label>Remove After Date</label>
    <type>DateTime</type>
</CustomField>