force-app/main/default/objects/Knowledge__kav/fields/Required_NET_Framework_Versions__c.field-meta.xml
<CustomField>
    <fullName>Required_NET_Framework_Versions__c</fullName>
    <description>RUBX-2419 – REQ-1857-Select a System Requirements Knowledge Article Type</description>
    <label>Required .NET Framework Versions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>.NET 4.6</fullName>
            </value>
            <value>
                <fullName>.NET 4.5.2</fullName>
            </value>
            <value>
                <fullName>.NET 4.5</fullName>
            </value>
            <value>
                <fullName>.NET 4.0</fullName>
            </value>
            <value>
                <fullName>.NET 3.5.1</fullName>
            </value>
            <value>
                <fullName>.NET 3.0</fullName>
            </value>
            <value>
                <fullName>.NET 2.0</fullName>
            </value>
            <value>
                <fullName>.NET 1.1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>