force-app/main/default/objects/Knowledge__kav/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>RUBX-2438 – Field created for REQ-1876-Select a Bulletin (type=Product) Knowledge Article Type</description>
    <inlineHelpText>To schedule a review date for the article, enter a date and time in the Review Date field. This option might be helpful if you included content that is subject to change (the URL for a third party, information about a pending regulation, etc.).</inlineHelpText>
    <label>Review Date</label>
    <type>DateTime</type>
</CustomField>