force-app/main/default/objects/Knowledge__kav/fields/Support_Status__c.field-meta.xml
<CustomField>
    <fullName>Support_Status__c</fullName>
    <description>RUBX-2419 – REQ-1857-Select a System Requirements Knowledge Article Type</description>
    <label>Support Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>End of Life</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>