force-app/main/default/objects/Knowledge__kav/fields/Supported_Client_Operating_Systems__c.field-meta.xml
<CustomField>
    <fullName>Supported_Client_Operating_Systems__c</fullName>
    <description>RUBX-2419 – REQ-1857-Select a System Requirements Knowledge Article Type</description>
    <label>Supported Client Operating Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Windows 10 Pro</fullName>
            </value>
            <value>
                <fullName>Windows 7 (32-bit)</fullName>
            </value>
            <value>
                <fullName>Windows 7 (64-bit)</fullName>
            </value>
            <value>
                <fullName>Windows 8 (32-bit)</fullName>
            </value>
            <value>
                <fullName>Windows 8 (64-bit)</fullName>
            </value>
            <value>
                <fullName>Windows Vista (32-bit)</fullName>
            </value>
            <value>
                <fullName>Windows Vista (64-bit)</fullName>
            </value>
            <value>
                <fullName>Windows XP (32-bit)</fullName>
            </value>
            <value>
                <fullName>Windows XP (64-bit)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>