force-app/main/default/objects/Knowledge__kav/fields/Supported_DBMS__c.field-meta.xml
<CustomField>
    <fullName>Supported_DBMS__c</fullName>
    <description>RUBX-2419 – REQ-1857-Select a System Requirements Knowledge Article Type</description>
    <label>Supported DBMS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SQL Server 2014</fullName>
            </value>
            <value>
                <fullName>SQL Server 2012</fullName>
            </value>
            <value>
                <fullName>SQL Server 2008 R2</fullName>
            </value>
            <value>
                <fullName>SQL Server 2008</fullName>
            </value>
            <value>
                <fullName>SQL Server 2005</fullName>
            </value>
            <value>
                <fullName>Progress</fullName>
            </value>
            <value>
                <fullName>UniData</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>