force-app/main/default/objects/Knowledge__kav/fields/Supported_Internet_Browsers__c.field-meta.xml
<CustomField>
    <fullName>Supported_Internet_Browsers__c</fullName>
    <description>RUBX-2419 – REQ-1857-Select a System Requirements Knowledge Article Type</description>
    <label>Supported Internet Browsers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internet Explorer 11</fullName>
            </value>
            <value>
                <fullName>Internet Explorer 10</fullName>
            </value>
            <value>
                <fullName>Internet Explorer 9</fullName>
            </value>
            <value>
                <fullName>Internet Explorer 8</fullName>
            </value>
            <value>
                <fullName>Internet Explorer 7</fullName>
            </value>
            <value>
                <fullName>Internet Explorer 6 SP1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>