force-app/main/default/objects/Knowledge__kav/fields/Supported_Server_Operating_Systems__c.field-meta.xml
<CustomField>
    <fullName>Supported_Server_Operating_Systems__c</fullName>
    <description>RUBX-2419 – REQ-1857-Select a System Requirements Knowledge Article Type</description>
    <label>Supported Server Operating Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Server 2012</fullName>
            </value>
            <value>
                <fullName>Server 2012 R2</fullName>
            </value>
            <value>
                <fullName>Server 2008 R2</fullName>
            </value>
            <value>
                <fullName>Server 2008 64-bit</fullName>
            </value>
            <value>
                <fullName>Server 2008 32-bit</fullName>
            </value>
            <value>
                <fullName>Server 2003 32-bit</fullName>
            </value>
            <value>
                <fullName>Server 2003 64-bit</fullName>
            </value>
            <value>
                <fullName>AIX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>