force-app/main/default/objects/Knowledge__kav/fields/Workaround_Fix__c.field-meta.xml
<CustomField>
    <fullName>Workaround_Fix__c</fullName>
    <description>RUBX-2416 – REQ-1854-Select an Issues Knowledge Article Type</description>
    <inlineHelpText>Describe the fix to the problem or the workaround. If there is more than one step be sure to use numbered steps and start each step with an action.</inlineHelpText>
    <label>Workaround/Fix</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>