force-app/main/default/objects/Knowledge__kav/recordTypes/Bulletins.recordType-meta.xml
<RecordType>
    <fullName>Bulletins</fullName>
    <active>true</active>
    <description>There are three types of bulletin records, Product, Support, and Training. Product Bulletins are product notifications, Support Bulletins are operation notifications and Training Bulletins provide upcoming product training opportunities.</description>
    <label>Bulletins</label>
</RecordType>