force-app/main/default/objects/Knowledge__kav/recordTypes/Issues.recordType-meta.xml
<RecordType>
    <fullName>Issues</fullName>
    <active>true</active>
    <description>An article that answers a specific question or solves a problem.</description>
    <label>Issues</label>
</RecordType>