force-app/main/default/objects/Knowledge__kav/recordTypes/Reference.recordType-meta.xml
<RecordType>
    <fullName>Reference</fullName>
    <active>true</active>
    <description>Contains support policy information, articles that are applicable to all products like the Support Handbook, they can be used for product documentation gaps for resolving a specific case where the product documentation is missing or could be expanded.</description>
    <label>Reference</label>
</RecordType>