force-app/main/default/objects/Knowledge__kav/recordTypes/Release_Notes.recordType-meta.xml
<RecordType>
    <fullName>Release_Notes</fullName>
    <active>true</active>
    <description>Describes the enhancements, fixes, and new functionality included in a specific release. Special permissions are required to add / edit content for this article type. Important! Content for this article type will only be available for certain products.</description>
    <label>Release Notes</label>
</RecordType>