force-app/main/default/objects/Knowledge__kav/recordTypes/System_Requirements.recordType-meta.xml
<RecordType>
    <fullName>System_Requirements</fullName>
    <active>true</active>
    <description>Contains the product system requirement information. Special permissions are required to add / edit content for this article type. Important! Content for this article type will only be available for certain products.</description>
    <label>System Requirements</label>
</RecordType>